--- a/pages/editProfile/editprofile.css
+++ b/pages/editProfile/editprofile.css
@@ -9,6 +9,14 @@
 .text {
   text-align: center;
 }
+.card-text{
+  font-size: 1rem;
+  font-family: 'RobotoRegular' !important;
+  font-weight: 300;
+  color: #707070;
+}
+
+
 
 .activement-title,
 .qualification-title {
@@ -57,6 +65,7 @@
 .year-select .btn {
   background-color: #fff;
   border: 0;
+  width: 100%;
   display: inline-block;
   font: inherit;
   box-sizing: border-box;
@@ -116,9 +125,16 @@
   border-radius: 50%;
 }
 
+
+.achievement-tab .attachment-textfield {
+  display: inline-block  !important;
+  width: 40%;
+}
+
 .primary-skill-carosuel .card {
   width: 100%;
   align-items: center;
+  padding: 6px;
   justify-content: center;
 }
 
@@ -127,6 +143,7 @@
   border: 3px solid #28b5f4;
   cursor: pointer;
   align-items: center;
+  opacity: 0.5;
   justify-content: center;
 }
 
@@ -155,8 +172,8 @@
 }
 
 .primary-skill-carosuel .card img {
-  width: 90px;
-  height: 90px;
+  width: 100%;
+  height: 100px;
 }
 
 .home-tab .gender-btn-group .btn-primary:not(:disabled):not(.disabled):active,
@@ -417,7 +434,7 @@
 }
 .achievement-tab small {
   font-size: 1.2rem;
-  float: right;
+
 }
 .tab_wrapper * {
   box-sizing: border-box;
