--- a/pages/portfolioUploadWork/portfolioUploadWork.css
+++ b/pages/portfolioUploadWork/portfolioUploadWork.css
@@ -1,79 +1,157 @@
 @font-face {
-    font-family: RobotoRegular;
-    src: url(../..//fonts/Roboto-Regular.woff);
-  }
-  @font-face {
-    font-family: RobotoBold;
-    src: url(../../fonts/Roboto-Bold.woff);
-  }
+  font-family: RobotoRegular;
+  src: url(../..//fonts/Roboto-Regular.woff);
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
 
-  .frame {
-	position: absolute;
-	/* top: 40%;
+.maincontentRow .back-icon {
+  font-size: 1.5vw;
+}
+.maincontentRow .upload-frame {
+  min-height: 26vw;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefef;
+}
+.maincontentRow .upload-icon {
+  background-image: url(../../images/uploadIcon.png);
+  width: 7.5vw;
+  height: 7.5vw;
+}
+
+.uploadfrm .upload-title span {
+  text-decoration: underline;
+  text-decoration-color: #666;
+}
+
+.frame {
+  position: absolute;
+  /* top: 40%;
 	left: 28%; */
-	width: 100%;
-	height: 400px;
-	/* margin-top: -200px;
+  width: 100%;
+  height: 400px;
+  /* margin-top: -200px;
 	margin-left: -200px; */
-	border-radius: 2px;
-	box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
-	overflow: hidden;
-	background: linear-gradient(to top right, darkmagenta 0%, hotpink 100%);
-	color: #333;
-	font-family: "Open Sans", Helvetica, sans-serif;
+  border-radius: 2px;
+  box-shadow: 4px 8px 16px 0 rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background: linear-gradient(to top right, darkmagenta 0%, hotpink 100%);
+  color: #333;
+  font-family: "Open Sans", Helvetica, sans-serif;
 }
 
 .center {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 300px;
-	height: 260px;
-	border-radius: 3px;
-	box-shadow: 8px 10px 15px 0 rgba(0, 0, 0, 0.2);
-	background: #fff;
-	display: flex;
-	align-items: center;
-	justify-content: space-evenly;
-	flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  height: 260px;
+  border-radius: 3px;
+  box-shadow: 8px 10px 15px 0 rgba(0, 0, 0, 0.2);
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
 .title {
-	width: 100%;
-	height: 50px;
-	border-bottom: 1px solid #999;
-	text-align: center;
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid #999;
+  text-align: center;
 }
 
 h1 {
-	font-size: 16px;
-	font-weight: 300;
-	color: #666;
+  font-size: 16px;
+  font-weight: 300;
+  color: #666;
 }
 
 .dropzone {
-	width: 100px;
-	height: 80px;
-	border: 1px dashed #999;
-	border-radius: 3px;
-	text-align: center;
+  width: 100px;
+  height: 80px;
+  border: 1px dashed #999;
+  border-radius: 3px;
+  text-align: center;
 }
 
 .upload-icon {
-	margin: 25px 2px 2px 2px;
+  margin: 25px 2px 2px 2px;
 }
 
 .upload-input {
-	position: relative;
-	top: -62px;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 0;
+  position: relative;
+  top: -62px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+.uploadfrm .card-body label, .upload-section label {
+  color: #616161;
+  font-family: "RobotoRegular" !important;
+  font-weight: 200;
+  font-size: calc(0.875rem + ((1vw - 13.6px) * 0.3571));
 }
 
-.btn {
+.uploadfrm .card-body .cover-img {
+  width: 200px;
+  height: 200px;
+}
+.uploadfrm .card-body .choose-image-btn {
+  display: block;
+}
+.uploadfrm .card-body .description-textarea {
+  resize: none;
+}
+
+.form-check-input:checked ~ .form-check-label::before {
+  color: #fff;
+  border-color: #7b1fa2;
+}
+
+.form-check-input:checked ~ .form-check-label.red::before {
+  background-color: red;
+}
+
+.form-check-input:checked ~ .form-check-label.green::before {
+  background-color: green;
+}
+
+.publish-btn {
+  padding: 0;
+  box-shadow: 0 2px 4px rgb(0 0 0 / 24%);
+  text-align: center;
+  width: 11.71875vw;
+  height: 2.5vw;
+  color: #fff;
+  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
+  font-family: Roboto, sans-serif;
+  float: right;
+  clear: both;
+  background: #28b5f4;
+  border-radius: 1.25vw;
+  border: none;
+}
+
+.card-header {
+  text-align: center;
+  font-family: "RobotoBold";
+  color: #616161;
+}
+.publish-btn:hover {
+  background: #28b5f4;
+  color: #fff;
+}
+
+/* .btn {
 	display: block;
 	width: 140px;
 	height: 40px;
@@ -89,7 +167,7 @@ h1 {
 .btn:hover {
 	background: rebeccapurple;
 	box-shadow: 0 3px 0 0 deeppink;
-}
+} */
 
 /* .uploadfrm h4 {
     font-size: calc(1rem + ((1vw - 13.6px) * .8929));
