--- a/pages/portfolioimage/portfolioimage.css
+++ b/pages/portfolioimage/portfolioimage.css
@@ -1,32 +1,99 @@
 @font-face {
-    font-family: RobotoRegular;
-    src: url(../..//fonts/Roboto-Regular.woff);
-  }
-  @font-face {
-    font-family: RobotoBold;
-    src: url(../../fonts/Roboto-Bold.woff);
-  }
-  .text {
-    text-align: center;
-  }
-  @font-face {
-    font-family: RobotoLight;
-    src: url(../../fonts/Roboto-Light.woff);
-  }
-  @font-face {
-    font-family: RobotoMedium;
-    src: url(../../fonts/Roboto-Medium.woff);
-  }
+  font-family: RobotoRegular;
+  src: url(../..//fonts/Roboto-Regular.woff);
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
+.text {
+  text-align: center;
+}
+@font-face {
+  font-family: RobotoLight;
+  src: url(../../fonts/Roboto-Light.woff);
+}
+@font-face {
+  font-family: RobotoMedium;
+  src: url(../../fonts/Roboto-Medium.woff);
+}
 
- 
-  
-  .card{
-    width: 24rem;
-    float: right;
-   
-    background: #fff;
-    border-radius: 1.0416666666666665vw;
-    overflow: hidden; 
-    margin-right: 6%;
-    margin-top: 2%;
-  }
+.back-button {
+  text-align: center;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 30vw;
+}
+
+.carousel-control-btn {
+  top: 50% !important;
+  bottom: 50% !important;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  margin: 0;
+  background-color: #28b5f4;
+  width: 50px !important;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.carousel-control-next {
+  right: -50px !important;
+}
+
+.carousel-inner .active {
+  border: none;
+}
+
+.post-share {
+  color: #616161;
+  font-family: "RobotoBold";
+  font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
+}
+
+.title-div {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.title-div p {
+  display: inline;
+  margin-left: 10%;
+  font-family: "RobotoBold";
+}
+
+.primary-btn {
+  background: #039be5 !important;
+  color: white !important;
+}
+
+.secondary-btn {
+  color: #039be5 !important;
+  border-color: #039be5 !important;
+}
+
+.marker-section {
+  background: #fafafa;
+  max-height: 250px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+::-webkit-scrollbar-thumb {
+  background: #d7d7d7;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.marker-comment-close {
+  display: flex;
+  align-items: center;
+  text-align: end;
+}
