--- a/pages/portfolio/portfolio.css
+++ b/pages/portfolio/portfolio.css
@@ -21,6 +21,45 @@
 .underline-text span {
   border-bottom: 4px solid #c7c7c7;
 }
+.tutorial-title h5 {
+  font-family: "RobotoBold";
+}
+
+.outline-secondary-btn {
+  color: #28b5f4 !important;
+  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929)) !important;
+  border: 2px solid #28b5f4 !important;
+  border-radius: 1.25vw !important;
+}
+
+.has-search .form-control {
+  padding-left: 2.375rem;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 2.375rem;
+  line-height: 2.375rem;
+  text-align: center;
+  pointer-events: none;
+  color: #aaa;
+}
+
+.dropdown-secondary-toggle {
+  background-color: #fff !important;
+  border-radius: 5px !important;
+  box-shadow: 0 1px 4px #999 !important;
+  color: #616161 !important;
+  line-height: 28px !important;
+}
+
+.secondary-btn {
+  color: #039be5 !important;
+  border-color: #039be5 !important;
+}
 
 .achivement-div {
   padding: 10px;
@@ -43,10 +82,33 @@
   padding: 0;
   margin: 0;
   width: 100%;
+  height: 755px;
   box-shadow: 0px 8px 16px rgb(0 0 0 / 16%);
   background: #fff;
   border-radius: 1.0416666666666665vw;
   overflow: hidden;
+}
+.tutorial-content {
+  font-family: "RobotoRegular";
+}
+.tutorial-tag hr {
+  border-top: 2px solid #c7c7c7;
+}
+
+.tab-content {
+  height: 650px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #d7d7d7;
+}
+::-webkit-scrollbar {
+  width: 4px;
 }
 
 .tab_wrapper > ul {
@@ -123,12 +185,12 @@
 .content .content-overlay {
   background: rgba(0, 0, 0, 0.7);
   position: absolute;
-  height: 99%;
-  width: 100%;
-  left: 0;
+  height: 100%;
+  width: 91%;
+  left: 1rem;
   top: 0;
   bottom: 0;
-  right: 0;
+  right: 1rem;
   opacity: 0;
   -webkit-transition: all 0.4s ease-in-out 0s;
   -moz-transition: all 0.4s ease-in-out 0s;
