--- a/pages/portfolio/portfolio.css
+++ b/pages/portfolio/portfolio.css
@@ -21,6 +21,105 @@
 .underline-text span {
   border-bottom: 4px solid #c7c7c7;
 }
+
+.profile-title{
+  color: #616161;
+  font-size: 1.5rem;
+  font-family: 'RobotoBold';
+}
+
+.achivement-viewer .modal-dialog {
+width: 800px;
+}
+
+.achivement-viewer .modal-dialog .viewer-close-btn{
+  display: inline-block;
+  right: 2px;
+  position: absolute;
+  color: white;
+}
+
+.requestModal textarea {
+  resize: none !important;
+}
+.requestModal .send-text-area-label {
+  font-family: "RobotoLight";
+}
+.portfolio-action-title{
+  font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
+  font-family: 'RobotoRegular';
+}
+
+.requestModal .modal-dialog {
+  width: 600px;
+}
+
+.modal {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+ 
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.request-btn {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post-image {
+  position: relative;
+  height: 70%;
+}
+
+.post-image img {
+  display: block;
+}
+
+.post-image .edit-left {
+  position: absolute;
+  top: 5px;
+  font-size: 2rem;
+  display: inline-block;
+  left: 8px;
+  color: white;
+  width: 10px;
+  border-radius: 50%;
+  font-size: 1.2rem;
+  height: 10px;
+}
+
+.post-image .circle-right {
+  position: absolute;
+  top: 5px;
+  font-size: 1.2rem;
+  display: inline-block;
+  right: 10px;
+  border-radius: 50%;
+  color: white;
+  width: 10px;
+  height: 10px;
+}
+
+.right-dropdown {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .tutorial-title h5 {
   font-family: "RobotoBold";
 }
@@ -34,6 +133,27 @@
 
 .has-search .form-control {
   padding-left: 2.375rem;
+}
+
+.remove-post-title {
+  font-size: 1rem;
+}
+
+.portfolio-close-modal .modal-header,
+.modal-footer {
+  border: none;
+}
+
+.feedback-active img {
+  opacity: 0.7;
+}
+
+.feedback-checkbox {
+  background-color: white;
+  color: black !important;
+  width: auto !important;
+  height: auto !important;
+  border-radius: none !important;
 }
 
 .has-search .form-control-feedback {
@@ -113,7 +233,9 @@
 
 .tab_wrapper > ul {
   clear: both;
-  display: inline-block;
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 .tab_wrapper > ul li a {
@@ -131,6 +253,7 @@
   text-align: center;
   position: relative;
   list-style: none;
+  margin-right: 5rem;
 }
 .tab_wrapper > ul li .active {
   font-family: "RobotoBold", sans-serif;
@@ -155,6 +278,12 @@
   .superimg {
     max-width: 30%;
     margin-left: 33%;
+  }
+  .requestModal .modal-dialog {
+    width: auto;
+  }
+  .achivement-viewer .modal-dialog{
+    width: 95%;
   }
 }
 @media only screen and (max-width: 600px) {
