--- a/pages/portfolioUploadWork/portfolioUploadWork.css
+++ b/pages/portfolioUploadWork/portfolioUploadWork.css
@@ -10,7 +10,7 @@
 .maincontentRow .back-icon {
   font-size: 1.5vw;
 }
-.maincontentRow .upload-frame {
+ .upload-frame {
   min-height: 26vw;
   width: 100%;
   display: flex;
@@ -18,7 +18,7 @@
   align-items: center;
   background-color: #efefef;
 }
-.maincontentRow .upload-icon {
+.upload-icon {
   background-image: url(../../images/uploadIcon.png);
   width: 7.5vw;
   height: 7.5vw;
@@ -125,6 +125,15 @@ h1 {
   background-color: green;
 }
 
+.cropImage{
+  min-height: 26vw;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #efefef;
+}
+
 .publish-btn {
   padding: 0;
   box-shadow: 0 2px 4px rgb(0 0 0 / 24%);
@@ -149,6 +158,29 @@ h1 {
 .publish-btn:hover {
   background: #28b5f4;
   color: #fff;
+}
+.file_upload {
+  opacity: 0.0;
+
+  /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+
+  /* IE 5-7 */
+  filter: alpha(opacity=0);
+
+  /* Netscape or and older firefox browsers */
+  -moz-opacity: 0.0;
+
+  /* older Safari browsers */
+  -khtml-opacity: 0.0;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height:100%;
 }
 
 /* .btn {
