--- a/pages/filterSearch/filterSearch.css
+++ b/pages/filterSearch/filterSearch.css
@@ -192,3 +192,59 @@ body {
 .navbar-nav:last-child {
   border-right: 0;
 }
+
+@media only screen and (max-width: 600px) {
+  .search-label{
+    text-align: center;
+    font-size: 99%;
+    margin-top: 5%
+  }
+}
+
+@media only screen and (max-width:600px) {
+.ssdrop1{
+  margin-right: 2%;
+}
+}
+
+@media only screen and (max-width:600px) {
+  .ssdrop2{
+    margin-top: 2%;
+    margin-right: 2%;
+  }
+  }
+
+  @media only screen and (max-width:600px) {
+    .ssdrop3{
+      margin-top: 2%;
+      margin-right: -5%;
+    }
+    }
+
+    /* @media only screen and (max-width:600px) {
+      .ssdrop4{
+        margin-top: 2%;
+        margin-right: -43%;
+      }
+    } */
+
+      @media only screen and (max-width: 600px) {
+        .ssprofile{
+          margin-left: -11%;
+          margin-right: 4%;
+        }
+      }
+
+      @media only screen and (max-width: 600px) {
+           .search-label{
+           margin-right: -2%;
+          }
+       }
+
+       @media only screen and (max-width: 600px) {
+        .ssbtnsort{
+          margin-left: 3%;
+          margin-top: 2%;
+        }
+       }       
+      
