--- a/pages/recommendation/recommendation.css
+++ b/pages/recommendation/recommendation.css
@@ -46,16 +46,18 @@ margin-top: 25%;
     font-family: 'RobotoRegular';
 }
 .message-box h3{
-    font-size: 8rem;
+    font-size: 4rem;
     color: white;
-    font-family: 'RobotoBold';
+    font-family: ' MontserratBlack;';
     display: block;
 }
 
 .message-box p{
-    font-family: 'RobotoRegular';
+    font-family: 'MontserratBlack';
     color: white;
-    font-size: 2rem;
+    /* font-size: 2rem; */
+    font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
+    
 }
 
 .user-profiles{
@@ -73,11 +75,11 @@ margin-top: 25%;
     border-radius: 24px !important;
     text-decoration: underline;
     box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
-   
-    font-size: calc(1rem + ((1vw - 13.6px) * .8929));
     color: #fff;
+    font-size: calc(1rem + ((1vw - 13.6px) * .8929));
     font-family: 'RobotoRegular';
     cursor: pointer;
+    width: 7.51vw;
 }
 
 
@@ -90,3 +92,15 @@ margin-top: 25%;
         }
   }
   
+  @media only screen and (max-width: 600px) {
+    .message-box p{
+     font-size: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 600px){
+    .done-btn{
+      width: 30%;
+      box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
+    }
+  }
