--- a/pages/recommendation/recommendation.css
+++ b/pages/recommendation/recommendation.css
@@ -104,3 +104,9 @@ margin-top: 25%;
       box-shadow: 0 2px 8px rgb(0 0 0 / 24%);
     }
   }
+
+  @media only screen and (max-width: 600px){
+    .user-profiles{
+      margin-top: -91%;
+    }
+  }
