--- a/pages/recommendation/recommendation.css
+++ b/pages/recommendation/recommendation.css
@@ -82,7 +82,9 @@ margin-top: 25%;
     width: 7.51vw;
 }
 
-
+.content-box{
+  margin-top: -35%;
+}
 @media only screen and (max-width: 600px) {
     .message-box {
         margin-top: 0;
@@ -110,3 +112,10 @@ margin-top: 25%;
       margin-top: -91%;
     }
   }
+  @media only  screen and (max-width:600px) {
+      .sscontentbox{
+        margin-top: -19%;
+      }   
+  }
+
+
