--- a/pages/premium/premium.css
+++ b/pages/premium/premium.css
@@ -223,5 +223,8 @@ body {
 }
 
 .boxhover2:hover {
-  box-shadow: 0 12px 24px rgb(255 101 101 / 60%);
+  box-shadow: 0 12px 24px rgb(140 227 239 / 60%);
+}
+.boxhover:hover{
+  box-shadow: 0 12px 24px rgb(0 0 0 / 60%);
 }
