--- a/pages/purchaseHistory/purchaseHistory.css
+++ b/pages/purchaseHistory/purchaseHistory.css
@@ -1,30 +1,40 @@
 @font-face {
-    font-family: RobotoRegular;
-    src: url(../..//fonts/Roboto-Regular.woff);
-  }
-  @font-face {
-    font-family: RobotoBold;
-    src: url(../../fonts/Roboto-Bold.woff);
-  }
-  .text {
-    text-align: center;
-  }
-  @font-face {
-    font-family: RobotoLight;
-    src: url(../../fonts/Roboto-Light.woff);
-  }
-  @font-face {
-    font-family: RobotoMedium;
-    src: url(../../fonts/Roboto-Medium.woff);
-  }
+  font-family: RobotoRegular;
+  src: url(../..//fonts/Roboto-Regular.woff);
+}
+@font-face {
+  font-family: RobotoBold;
+  src: url(../../fonts/Roboto-Bold.woff);
+}
+.text {
+  text-align: center;
+}
+@font-face {
+  font-family: RobotoLight;
+  src: url(../../fonts/Roboto-Light.woff);
+}
+@font-face {
+  font-family: RobotoMedium;
+  src: url(../../fonts/Roboto-Medium.woff);
+}
 
-.wrapper{
-    background-color:  rgba(140,227,239,1);
+.wrapper {
+  background-color: rgba(140, 227, 239, 1);
 }
-.content-wrapper{
-    /* background-color: lightblue; */
-   background-color:  rgba(140,227,239,1);
+
+.content {
+  width: 80%;
+  margin: auto;
 }
-.maincontentRow{
-    margin-top: 6%;
+
+.table thead th {
+  border: none;
+}
+
+.content-wrapper {
+  /* background-color: lightblue; */
+  background-color: rgba(140, 227, 239, 1);
+}
+.maincontentRow {
+  margin-top: 6%;
 }
