--- a/pages/feedback/feedback.css
+++ b/pages/feedback/feedback.css
@@ -46,9 +46,9 @@ body {
   margin: 4px;
 } */
 
-
-
-
+.feed-title {
+  font-family: "RobotoBold";
+}
 .problem {
   color: rgba(0, 0, 0, 0.3);
   margin-top: 12%;
@@ -58,31 +58,31 @@ body {
 .problem img {
   width: 37.34375vw;
 }
-.scroller{
+.scroller {
   height: 42.604167vw;
   overflow-y: scroll;
   overflow: auto;
-}  
-.active{
+}
+.active {
   background: rgba(40, 181, 244, 0.5);
   border-left: 0.41667vw solid #28b5f4;
   color: #fff;
   border-radius: 0 5px 5px 0;
 }
 .pplMsg {
-/* background: #FAFAFA; */
-min-height: 4.6875vw;
-border-bottom: 1px solid #F1F1F3;
-clear: both;
+  /* background: #FAFAFA; */
+  min-height: 4.6875vw;
+  border-bottom: 1px solid #f1f1f3;
+  clear: both;
 }
 .photoProfile {
-float: left;
+  float: left;
 }
 
 .photoProfile img {
-max-width: 100%;
-width: 100%;
-margin: 4px;
+  max-width: 100%;
+  width: 100%;
+  margin: 4px;
 }
 .feedSec h4 {
   font-size: calc(1.625rem + ((1vw - 13.6px) * 1.7857));
@@ -90,7 +90,7 @@ margin: 4px;
   font-weight: normal;
   /* padding: 5.208333333333334vw 0 0 3.3333333333333335vw; */
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: black;
   padding-left: 10%;
 }
@@ -103,48 +103,43 @@ margin: 4px;
   border-radius: 50%;
 }
 .feedCnt p {
-  padding: 2.208333333333334vw 0 0;
   margin: 0;
-  font-size: calc(0.875rem + ((1vw - 13.6px) * 0.7143));
-  line-height: 1.25vw;
+  font-size: 1rem;
   color: #000;
-  font-family: 'Roboto', sans-serif;
+  overflow-y: auto;
+    max-height: 50%;
+  font-family: "RobotoRegular";
 }
-.viewProfile{
+.viewProfile {
   text-align: center;
 }
 .viewProfile a:hover {
-  color: #039BE5;
-}
-.feedCnt {
-  float: left;
-  width: 63.79%;
-  padding: 0 0 0 3.9%;
+  color: #039be5;
 }
 .ignore a {
   float: left;
   background: #fff;
-  color: #039BE5;
+  color: #039be5;
   font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   width: 14.583333333333334vw;
   line-height: 2.5vw;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0px 2px 8px rgb(0 0 0 / 24%);
-  border: 1px solid #039BE5;
+  border: 1px solid #039be5;
 }
 .ignore a:hover {
-  background-color: #039BE5;
+  background-color: #039be5;
   color: #fff;
 }
 .viewPost a {
   float: left;
-  background: #039BE5;
+  background: #039be5;
   color: #fff;
   font-size: calc(1rem + ((1vw - 13.6px) * 0.8929));
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-decoration: none;
   width: 14.583333333333334vw;
   line-height: 2.5vw;
@@ -155,16 +150,10 @@ margin: 4px;
 a {
   color: #00e;
 }
-.viewPost {
-  padding-top: 30%;
+
+.ignore {
+  padding-top: 15%;
   padding-left: 15%;
-  /* padding: 15%; */
-  margin: 0;
-  cursor: pointer;
-}
-.ignore{
- padding-top: 15%;
- padding-left: 15%;
   margin: 0;
   cursor: pointer;
 }
@@ -185,7 +174,8 @@ a {
   .viewProfile {
     font-size: 12px;
   }
-  .viewPost a, .ignore a {
+  .viewPost a,
+  .ignore a {
     font-size: 16px;
     line-height: 16px;
     width: auto;
@@ -193,4 +183,3 @@ a {
     margin-bottom: 10px;
   }
 }
-
