--- a/pages/landingPage/landingPage.css
+++ b/pages/landingPage/landingPage.css
@@ -1,40 +1,30 @@
-.pfont{
-    /* font-size: xxx-large; */
-    margin-top: 18%;
-}
-.ul li.active a {
-    font-family: MontserratBold;
-}
-ul li a {
-    text-decoration: none;
-    color: #616161;
-    line-height: 4.635vw;
+.loginbtn{
     float: left;
-}
-/* .design{
-    padding: 0;
-    margin: auto;
+    border-radius: 24px;
+    width: 100%;
     background: #28b5f4;
-    border-radius: 12px;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -.417vw;
-    height: .833vw;
-    width: 6.354166666666666vw;
-} */
-.navbar-badge {
-    font-size: 0.6rem;
-    font-weight: 300;
-    padding: 2px 4px;
-    position: absolute;
-    right: 5px;
-    top: 26px;
-    background: #039be5;
-    color: white;
+    line-height: 2.2857142857142856em;
+    box-shadow: 0 2px 2px rgb(0 0 0 / 24%);
+    text-align: center;
+    color: #fff;
+    font-family: Roboto,sans-serif;
+    text-decoration: none;
+    font-size: calc(1rem + ((1vw - 13.6px) * .8929));
+    width: 209%;
+    margin-left: -296%;
 }
-.navbar{
-    margin-top: -2%;
+.navbarLink{
+    margin-top: 3%;
+    margin-left: -18%;
+}
+.profilepic{
+    margin-left: 18%;
+}
+.pfont{
+    margin-top: 18%;
+    color: #616161;
+    font-size: 2.1rem;
+    font-family: 'RobotoBold';
 }
 .landingMain h4 {
     padding: 2.5vw 0 0;
@@ -45,6 +35,23 @@ ul li a {
     font-size: calc(1.625rem + ((1vw - 13.6px) * 1.7857));
     font-family: Roboto,sans-serif;
 }
+.micafilatag{
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+.col-md-3{
+    margin-bottom: 3%;
+    background-color: white;
+}
+.col-md-2{
+    margin-bottom: 3%;
+}
+.col-md-6{
+    margin-bottom: 3%;
+}
+.img{
+    width: 100%;
+}
 @media only screen and (max-width:600px) {
     .navbar-badge{
         top:3px;
@@ -53,5 +60,16 @@ ul li a {
 @media only screen and (max-width:600px) {
     .micafilatag{
         margin-left: 34%;
+    }
+}
+@media only screen and (max-width:600px) {
+    .navbarLink{
+        display: none;
+    }
+}
+@media only screen and (max-width:600px) {
+    .loginbtn{
+    margin-left: -57%;
+    margin-top: 13%;
     }
 }
