--- a/pages/portfolio/portfolio.css
+++ b/pages/portfolio/portfolio.css
@@ -22,17 +22,17 @@
   border-bottom: 4px solid #c7c7c7;
 }
 
-.profile-title{
+.profile-title {
   color: #616161;
   font-size: 1.5rem;
-  font-family: 'RobotoBold';
+  font-family: "RobotoBold";
 }
 
 .achivement-viewer .modal-dialog {
-width: 800px;
+  width: 800px;
 }
 
-.achivement-viewer .modal-dialog .viewer-close-btn{
+.achivement-viewer .modal-dialog .viewer-close-btn {
   display: inline-block;
   right: 2px;
   position: absolute;
@@ -45,9 +45,9 @@ width: 800px;
 .requestModal .send-text-area-label {
   font-family: "RobotoLight";
 }
-.portfolio-action-title{
-  font-size: calc(1.125rem + ((1vw - 13.6px) * 1.0714));
-  font-family: 'RobotoRegular';
+.portfolio-action-title {
+  font-size: 1.25rem;
+  font-family: "RobotoRegular";
 }
 
 .requestModal .modal-dialog {
@@ -65,7 +65,6 @@ width: 800px;
     content: " ";
     height: 100%;
   }
- 
 }
 
 .modal-dialog {
@@ -126,7 +125,7 @@ width: 800px;
 
 .outline-secondary-btn {
   color: #28b5f4 !important;
-  font-size: calc(1rem + ((1vw - 13.6px) * 0.8929)) !important;
+  font-size: 1rem !important;
   border: 2px solid #28b5f4 !important;
   border-radius: 1.25vw !important;
 }
@@ -253,7 +252,6 @@ width: 800px;
   text-align: center;
   position: relative;
   list-style: none;
-  margin-right: 5rem;
 }
 .tab_wrapper > ul li .active {
   font-family: "RobotoBold", sans-serif;
@@ -282,7 +280,7 @@ width: 800px;
   .requestModal .modal-dialog {
     width: auto;
   }
-  .achivement-viewer .modal-dialog{
+  .achivement-viewer .modal-dialog {
     width: 95%;
   }
 }
@@ -292,11 +290,7 @@ width: 800px;
   }
 }
 
-@media only screen and (max-width: 600px) {
-  .ssdesign1 {
-    margin-left: 82%;
-  }
-}
+
 
 @media only screen and (max-width: 600px) {
   .paragraph {
