--- a/pages/landingPage/landingPage.css
+++ b/pages/landingPage/landingPage.css
@@ -1,75 +1,83 @@
-.loginbtn{
-    float: left;
-    border-radius: 24px;
-    width: 100%;
-    background: #28b5f4;
-    line-height: 2.2857142857142856em;
-    box-shadow: 0 2px 2px rgb(0 0 0 / 24%);
-    text-align: center;
-    color: #fff;
-    font-family: Roboto,sans-serif;
-    text-decoration: none;
-    font-size: calc(1rem + ((1vw - 13.6px) * .8929));
-    width: 209%;
-    margin-left: -296%;
+.loginbtn {
+  float: left;
+  border-radius: 24px;
+  width: 100%;
+  background: #28b5f4;
+  box-shadow: 0 2px 2px rgb(0 0 0 / 24%);
+  text-align: center;
+  color: #fff;
+  font-family: "RobotoRegular";
+  text-decoration: none;
+  font-size: 1rem;
+  width: 209%;
+  margin-left: -296%;
 }
-.navbarLink{
-    margin-top: 3%;
-    margin-left: -18%;
+
+body::-webkit-scrollbar {
+  width: 1em;
 }
-.profilepic{
-    margin-left: 18%;
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
-.pfont{
-    margin-top: 18%;
-    color: #616161;
-    font-size: 2.1rem;
-    font-family: 'RobotoBold';
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
+.navbarLink {
+  margin-top: 3%;
+  margin-left: -18%;
+}
+.profilepic {
+  margin-left: 18%;
+}
+.pfont {
+  margin-top: 18%;
+  color: #616161;
+  font-size: 2.1rem;
+  font-family: "RobotoBold";
 }
 .landingMain h4 {
-    padding: 2.5vw 0 0;
-    margin: 0;
-    font-weight: 400;
-    text-align: center;
-    line-height: 1.1666666666666667em;
-    font-size: calc(1.625rem + ((1vw - 13.6px) * 1.7857));
-    font-family: Roboto,sans-serif;
+  padding: 2.5vw 0 0;
+  margin: 0;
+  font-weight: 400;
+  text-align: center;
+  line-height: 1.1666666666666667em;
+  font-size: 1.6rem;
+  font-family: "RobotoRegular";
 }
-.micafilatag{
-    margin-top: 2%;
-    margin-bottom: 1%;
+.micafilatag {
+  margin-top: 2%;
+  margin-bottom: 1%;
 }
-.col-md-3{
-    margin-bottom: 3%;
-    background-color: white;
+.col-md-3 {
+  margin-bottom: 3%;
+  background-color: white;
 }
-.col-md-2{
-    margin-bottom: 3%;
+.col-md-2 {
+  margin-bottom: 3%;
 }
-.col-md-6{
-    margin-bottom: 3%;
+.col-md-6 {
+  margin-bottom: 3%;
 }
-.img{
-    width: 100%;
+.img {
+  width: 100%;
 }
-@media only screen and (max-width:600px) {
-    .navbar-badge{
-        top:3px;
-    }
+@media only screen and (max-width: 600px) {
+  .navbar-badge {
+    top: 3px;
+  }
 }
-@media only screen and (max-width:600px) {
-    .micafilatag{
-        margin-left: 34%;
-    }
+@media only screen and (max-width: 600px) {
+  .navbarLink {
+    display: none;
+  }
 }
-@media only screen and (max-width:600px) {
-    .navbarLink{
-        display: none;
-    }
-}
-@media only screen and (max-width:600px) {
-    .loginbtn{
+@media only screen and (max-width: 600px) {
+  .loginbtn {
     margin-left: -57%;
     margin-top: 13%;
-    }
+  }
 }
